--- a/inauguralproject/inauguralproject.ipynb
+++ b/inauguralproject/inauguralproject.ipynb
@@ -28,11 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from scipy import optimize\n",
     "\n",
     "# autoreload modules when code is run\n",
     "%load_ext autoreload\n",
@@ -55,28 +56,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "BRIEFLY EXPLAIN HOW YOU SOLVE THE MODEL."
+    "We solve the model by scipy-optimization.\n",
+    "\n",
+    "First, we define the relevant variables. \n",
+    "\n",
+    "Second, we define our utility function and budget constraint as functions. The utility function returns the utility from the given inputs - this is what we want to optimize. The budget-constraint returns the budget given the values herein. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "[1 4 9]\n"
-     ]
+     "text": "Optimal labour supply is: 0.339\nOptimal consumption is: 1.102\nyielding a utility of: 0.076\n"
     }
    ],
    "source": [
-    "# code for solving the model (remember documentation and comments)\n",
+    "#Defining variables:\n",
+    "m=1 #money\n",
+    "v=10 #v\n",
+    "e=0.3 #frisch\n",
+    "tau_0=0.4 #ltax\n",
+    "tau_1=0.1 #ttax\n",
+    "kappa=0.4 #cutoff\n",
+    "w=0.5\n",
     "\n",
-    "a = np.array([1,2,3])\n",
-    "b = inauguralproject.square(a)\n",
-    "print(b)"
+    "# Defining utility function and budget constraint:\n",
+    "def utility(l,c,e,v):\n",
+    "    # Returning utility from labour supply and consumption\n",
+    "    u=np.log(c)-v*l**(1+1/e)/(1+1/e)\n",
+    "    return u\n",
+    "\n",
+    "def budget_constraint(m,w,l,tau_0,tau_1,kappa):\n",
+    "    # Returning total resources in terms of wage less taxes and cash\n",
+    "    budget=m+w*l-w*l*tau_0-tau_1*max((w*l-kappa),0)\n",
+    "    return budget\n",
+    "\n",
+    "# Defining a function, setting consumption equal to budget (as we know, the consumer chooses to spend entire budget.),\n",
+    "# Making this function return the utility, while c = m (negatively, as scipy only can minimize).\n",
+    "# This is what we want to optimize.\n",
+    "def decision(l,w,e,v,tau_0,tau_1,kappa):\n",
+    "    c=budget_constraint(m,w,l,tau_0,tau_1,kappa)\n",
+    "    return -utility(l,c,e,v)\n",
+    "\n",
+    "# Defining the optimizer-function, optimizing the consumer's decision function for l, given all other values in decision.\n",
+    "def optimizer(w,e,v,tau_0,tau_1,kappa,m):\n",
+    "    # Call the solver\n",
+    "    sol_case1 = optimize.minimize_scalar(\n",
+    "        decision,method='bounded',\n",
+    "        bounds=(0,1),args=(w,e,v,tau_0,tau_1,kappa))\n",
+    "\n",
+    "    # Making the optimizer-function create a list of the three solution-values, l, c, and u.\n",
+    "    # Optimal labor equals the optimized solution in the function:\n",
+    "    lstar = sol_case1.x\n",
+    "\n",
+    "    # Optimal consumption equals the budget constraint-function as we know, given the optimal l.\n",
+    "    cstar = budget_constraint(m,w,lstar,tau_0,tau_1,kappa)\n",
+    "\n",
+    "    # Optimal utility must then be equal to the utility function given optimal l and c.\n",
+    "    ustar = utility(lstar,cstar,e,v)\n",
+    "    return [lstar,cstar,ustar]\n",
+    "\n",
+    "# Draws out variables from the optimizer-list.\n",
+    "lstar = optimizer(w,e,v,tau_0,tau_1,kappa,m)[0]\n",
+    "cstar = optimizer(w,e,v,tau_0,tau_1,kappa,m)[1]\n",
+    "ustar = optimizer(w,e,v,tau_0,tau_1,kappa,m)[2]\n",
+    "\n",
+    "def printsolution(w,e,v,tau_0,tau_1,kappa,m):\n",
+    "    print(f'Optimal labour supply is: {lstar:.3f}')\n",
+    "    print(f'Optimal consumption is: {cstar:.3f}')\n",
+    "    print(f'yielding a utility of: {ustar:.3f}')\n",
+    "\n",
+    "printsolution(w,e,v,tau_0,tau_1,kappa,m)\n",
+    "\n"
    ]
   },
   {
@@ -202,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   },
   "toc-autonumbering": true
  },
