--- a/inauguralproject/Untitled1.ipynb
+++ b/inauguralproject/Untitled1.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
     "l_vec=np.empty(N)\n",
     "c_vec=np.empty(N)\n",
     "for i,w in enumerate(w_vec):\n",
-    "    bundle=optimiser(w,e,v,tau_0,tau_1,kappa,m)\n",
+    "    bundle=optimiser(w,e,v,tau_0,tau_1,kappa,money)\n",
     "    l_vec[i]=bundle[0]\n",
     "    c_vec[i]=bundle[1]\n",
     "\n",
@@ -141,20 +141,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.33924126 0.33925924 0.33927721 ... 0.4197064  0.41971242 0.41971845] [1.10177238 1.10179813 1.10182388 ... 1.35473783 1.35476333 1.35478884]\n"
+      "[0.38862935 0.35226956 0.39199602 ... 0.35572067 0.41864827 0.41920972] [1.35224106e-311 1.35224135e-311 3.99332373e-001 ... 4.12805972e-001\n",
+      " 4.09120935e-001 3.48260884e-001]\n"
      ]
     }
    ],
    "source": [
     "N=10000\n",
-    "wi_vec=np.linspace(0.5,1.5,N)\n",
+    "np.random.seed(1986)\n",
+    "wi_vec=np.random.uniform(0.5,1.5,size=N)\n",
     "l_vec=np.empty(N)\n",
     "c_vec=np.empty(N)\n",
     "for i,w in enumerate(wi_vec):\n",
@@ -165,38 +167,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         lstar   wages\n",
-      "0     0.339241  0.5000\n",
-      "1     0.339259  0.5001\n",
-      "2     0.339277  0.5002\n",
-      "3     0.339295  0.5003\n",
-      "4     0.339313  0.5004\n",
-      "...        ...     ...\n",
-      "9995  0.419694  1.4996\n",
-      "9996  0.419700  1.4997\n",
-      "9997  0.419706  1.4998\n",
-      "9998  0.419712  1.4999\n",
-      "9999  0.419718  1.5000\n",
-      "\n",
-      "[10000 rows x 2 columns]\n"
+      "[0.16769816 0.08135148 0.17725977 ... 0.0853116  0.27029152 0.27264245]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1630.412448460049"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "tax_list=pd.DataFrame({'lstar':l_vec,'wages':wi_vec})\n",
-    "print(tax_list)\n",
+    "tax_rev=lambda l_vec,wi_vec: tau_0*wi_vec*l_vec+tau_1*np.fmax(wi_vec*l_vec-kappa,0)\n",
+    "tax=tax_rev(l_vec,wi_vec)\n",
+    "print(tax)\n",
+    "np.sum(tax)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.72013165 0.69283347 0.72198602 ... 0.68882816 0.73615868 0.73644821] [1.35224160e-311 1.35221446e-311 2.94942740e+179 ... 6.81444589e-038\n",
+      " 4.46964737e-033 3.24253045e-086]\n",
+      "[0.34486548 0.15999972 0.36015334 ... 0.16649992 0.50562222 0.50923575]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3196.6947029870807"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e_1=0.1\n",
     "\n",
-    "def tax_rev(tau_0,w,tau_1,kappa,l):\n",
-    "    return tau0*w*l+tau_1*max(w*l-kappa)\n",
-    "\n"
+    "N=10000\n",
+    "np.random.seed(1986)\n",
+    "wi_vec=np.random.uniform(0.5,1.5,size=N)\n",
+    "l_vec1=np.empty(N)\n",
+    "c_vec=np.empty(N)\n",
+    "for i,w in enumerate(wi_vec):\n",
+    "    bundle=optimiser(w,e_1,v,tau_0,tau_1,kappa,m)\n",
+    "    l_vec1[i]=bundle[0]\n",
+    "print(l_vec1, c_vec)\n",
+    "\n",
+    "tax_rev=lambda l_vec1,wi_vec: tau_0*wi_vec*l_vec1+tau_1*np.fmax(wi_vec*l_vec1-kappa,0)\n",
+    "tax=tax_rev(l_vec1,wi_vec)\n",
+    "print(tax)\n",
+    "np.sum(tax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def optimiser1(l_vec,wi_vec):\n",
+    "    sol_case2 = optimize.minimize_scalar(\n",
+    "        tax_rev,method='bounded',\n",
+    "        bounds=(0,1),args=(l_vec,wi_vec))\n",
+    "    sol_case2.x\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    "
    ]
   },
   {
