--- a/inauguralproject/Vores eget lort.ipynb
+++ b/inauguralproject/Vores eget lort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "    c_values = np.empty(shape_tuple)\n",
     "    l_values = np.empty(shape_tuple)\n",
     "    u_values = np.empty(shape_tuple)\n",
-    "    \n",
+    "    print(\"hello world\")\n",
     "    # b. start from guess of c=l=0\n",
     "    c_best = 0\n",
     "    l_best = 0\n",
@@ -69,13 +69,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "c = 0.20000000\nl = 0.00250000\nu  = -1.60981242\nc-x = -99.80000000\n(0.2, 0.0025, -1.6098124217102274, array([[0.2, 0.2, 0.2, ..., 0.2, 0.2, 0.2],\n       [0.2, 0.2, 0.2, ..., 0.2, 0.2, 0.2],\n       [0.2, 0.2, 0.2, ..., 0.2, 0.2, 0.2],\n       ...,\n       [0.2, 0.2, 0.2, ..., 0.2, 0.2, 0.2],\n       [0.2, 0.2, 0.2, ..., 0.2, 0.2, 0.2],\n       [0.2, 0.2, 0.2, ..., 0.2, 0.2, 0.2]]), array([[0.0025, 0.0025, 0.0025, ..., 0.0025, 0.0025, 0.0025],\n       [0.0025, 0.0025, 0.0025, ..., 0.0025, 0.0025, 0.0025],\n       [0.0025, 0.0025, 0.0025, ..., 0.0025, 0.0025, 0.0025],\n       ...,\n       [0.0025, 0.0025, 0.0025, ..., 0.0025, 0.0025, 0.0025],\n       [0.0025, 0.0025, 0.0025, ..., 0.0025, 0.0025, 0.0025],\n       [0.0025, 0.0025, 0.0025, ..., 0.0025, 0.0025, 0.0025]]), array([[-1.60981242, -1.60981242, -1.60981242, ..., -1.60981242,\n        -1.60981242, -1.60981242],\n       [-1.60981242, -1.60981242, -1.60981242, ..., -1.60981242,\n        -1.60981242, -1.60981242],\n       [-1.60981242, -1.60981242, -1.60981242, ..., -1.60981242,\n        -1.60981242, -1.60981242],\n       ...,\n       [-1.60981242, -1.60981242, -1.60981242, ..., -1.60981242,\n        -1.60981242, -1.60981242],\n       [-1.60981242, -1.60981242, -1.60981242, ..., -1.60981242,\n        -1.60981242, -1.60981242],\n       [-1.60981242, -1.60981242, -1.60981242, ..., -1.60981242,\n        -1.60981242, -1.60981242]]))\n"
+     "text": "hello world\nc = 0.20000000\nl = 0.00250000\nu  = -1.60981242\nc-x = -99.80000000\n(0.2, 0.0025, -1.6098124217102274, array([[0.2, 0.2, 0.2, ..., 0.2, 0.2, 0.2],\n       [0.2, 0.2, 0.2, ..., 0.2, 0.2, 0.2],\n       [0.2, 0.2, 0.2, ..., 0.2, 0.2, 0.2],\n       ...,\n       [0.2, 0.2, 0.2, ..., 0.2, 0.2, 0.2],\n       [0.2, 0.2, 0.2, ..., 0.2, 0.2, 0.2],\n       [0.2, 0.2, 0.2, ..., 0.2, 0.2, 0.2]]), array([[0.0025, 0.0025, 0.0025, ..., 0.0025, 0.0025, 0.0025],\n       [0.0025, 0.0025, 0.0025, ..., 0.0025, 0.0025, 0.0025],\n       [0.0025, 0.0025, 0.0025, ..., 0.0025, 0.0025, 0.0025],\n       ...,\n       [0.0025, 0.0025, 0.0025, ..., 0.0025, 0.0025, 0.0025],\n       [0.0025, 0.0025, 0.0025, ..., 0.0025, 0.0025, 0.0025],\n       [0.0025, 0.0025, 0.0025, ..., 0.0025, 0.0025, 0.0025]]), array([[-1.60981242, -1.60981242, -1.60981242, ..., -1.60981242,\n        -1.60981242, -1.60981242],\n       [-1.60981242, -1.60981242, -1.60981242, ..., -1.60981242,\n        -1.60981242, -1.60981242],\n       [-1.60981242, -1.60981242, -1.60981242, ..., -1.60981242,\n        -1.60981242, -1.60981242],\n       ...,\n       [-1.60981242, -1.60981242, -1.60981242, ..., -1.60981242,\n        -1.60981242, -1.60981242],\n       [-1.60981242, -1.60981242, -1.60981242, ..., -1.60981242,\n        -1.60981242, -1.60981242],\n       [-1.60981242, -1.60981242, -1.60981242, ..., -1.60981242,\n        -1.60981242, -1.60981242]]))\n"
     }
    ],
    "source": [
@@ -107,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.8.1-final"
   }
  },
  "nbformat": 4,
