commit on 'master'

--- a/inauguralproject/inauguralproject.ipynb
+++ b/inauguralproject/inauguralproject.ipynb
@@ -28,15 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy import optimize\n",
@@ -70,18 +64,18 @@
     "\n",
     "Third, we define a decision-function, returning the utility, given our knowledge, that consumption equals the budget.\n",
     "\n",
-    "Fourth, we define our optimization-function. Here, we optimize the decision-function for labor, given all the other values. "
+    "Fourth, we define our optimization-function. Here, we optimize the decision-function for labor, given all the other values. This returns the optimal labor, which enables us to calculate the consumption and utility of the consumer. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "Optimal labour supply is: 0.339\nOptimal consumption is: 1.102\nyielding a utility of: 0.076\n"
+     "text": "Labour supply: 0.339\nConsumption: 1.102\nUtility: 0.076\n"
     }
    ],
    "source": [
@@ -136,11 +130,12 @@
     "ustar = optimizer(w,e,v,tau_0,tau_1,kappa,m)[2]\n",
     "\n",
     "def printsolution(w,e,v,tau_0,tau_1,kappa,m):\n",
-    "    print(f'Optimal labour supply is: {lstar:.3f}')\n",
-    "    print(f'Optimal consumption is: {cstar:.3f}')\n",
-    "    print(f'yielding a utility of: {ustar:.3f}')\n",
+    "    print(f'Labour supply: {lstar:.3f}')\n",
+    "    print(f'Consumption: {cstar:.3f}')\n",
+    "    print(f'Utility: {ustar:.3f}')\n",
     "\n",
-    "printsolution(w,e,v,tau_0,tau_1,kappa,m)\n"
+    "printsolution(w,e,v,tau_0,tau_1,kappa,m)\n",
+    ""
    ]
   },
   {
@@ -342,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ADD ANSWER."
+    "Here, we find the tax rates and tax cutoff, such that we maximize tax revenue given the consumer behavior. "
    ]
   },
   {
@@ -386,7 +381,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ADD CONCISE CONLUSION."
+    "We solved the consumer problem, yielding the optimal labour and consumption maximizing utility of the agent. \n",
+    "Next, we calculated the expected tax revenue given the consumer preferences.\n"
    ]
   },
   {
