'commit on master'

--- a/inauguralproject/Vores eget lort.ipynb
+++ b/inauguralproject/Vores eget lort.ipynb
@@ -15,6 +15,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "hej\n"
+    }
+   ],
+   "source": [
+    "x='hej'\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def u_find_best_choice(m,v,e,kappa,tau1,tau0,w,x,N1,N2,do_print=True):\n",
@@ -107,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1-final"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
