--- a/inauguralproject/Vores eget lort.ipynb
+++ b/inauguralproject/Vores eget lort.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "import numpy as np\n",
     "def u_func(c,l,v,e):\n",
-    "    return np.log(c) - v*(l**(1+1/e))/(1+(1/e))"
+    "    return np.log(c) - v*(l**(1+1/e))/(1+(1/e))\n",
+    "\n",
+    "print(\"Hello world\")"
    ]
   },
   {
@@ -107,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.8.1-final"
   }
  },
  "nbformat": 4,
