commit on 'master'

--- a/inauguralproject/inauguralproject.ipynb
+++ b/inauguralproject/inauguralproject.ipynb
@@ -73,8 +73,8 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": "Labour supply: 0.339\nConsumption: 1.102\nUtility: 0.076\n"
     }
    ],
@@ -134,7 +134,8 @@
     "    print(f'Consumption: {cstar:.3f}')\n",
     "    print(f'Utility: {ustar:.3f}')\n",
     "\n",
-    "printsolution(w,e,v,params,m)\n"
+    "printsolution(w,e,v,params,m)\n",
+    ""
    ]
   },
   {
