commit on 'master'

--- a/dataproject/dataproject.ipynb
+++ b/dataproject/dataproject.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# YOUR PROJECT TITLE"
+    "# Data analysis"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "importing tables from the FRED source, we have chosen 1-Year Treasury Constant Maturity Rate (DGS1), 10-Year Treasury Constant Maturity Rate (DGS10) and Wilshire 5000 Full Cap Price Index (Will5000prfc) where all the timeseries end in 25th of March 2020. Note the different starttime, this will be corrected for in the code later."
+    "importing tables from the FRED source, we have chosen $1$-Year Treasury Constant Maturity Rate (DGS1), $10$-Year Treasury Constant Maturity Rate (DGS10) and Wilshire 5000 Full Cap Price Index (Will5000prfc) where all the timeseries end in $25^{th}$ of March 2020. Note the different starttime, this will be corrected for in the code later."
    ]
   },
   {
@@ -167,7 +167,7 @@
    "source": [
     "In the following code we perform a regression with OLS. \n",
     "Our model is $log(stocks)=constant+dgs10$. \n",
-    "Note that we have chosen the 10-year maturity rate, since this will represent the most realistic trading trade-off."
+    "Note that we have chosen the $10$-year maturity rate, since this will represent the most realistic trading trade-off."
    ]
   },
   {
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We conclude that the dgs10 parameter affects the 10-year maturity rate significantly negative, thus when the maturity rate increases with $1 \\%$-point"
+    "We conclude that the dgs10 parameter affects the $10$-year maturity rate significantly negative, thus when the maturity rate increases with $1 \\%$-point the stocks will decrease with $26\\%$"
    ]
   },
   {
