--- a/dataproject/Data Project.ipynb
+++ b/dataproject/Data Project.ipynb
@@ -291,7 +291,8 @@
     }
    ],
    "source": [
-    "new_plotting(df1=data)"
+    "#note that interactive plots are not supported in VSCode. However, they do work in Jupyter Lab\n",
+    "new_plotting(df1=data) "
    ]
   },
   {
