--- a/dataproject/Data Project.ipynb
+++ b/dataproject/Data Project.ipynb
@@ -170,8 +170,7 @@
     "ax2.plot(data['stocks_mvavg'],c='navy',linestyle='--',label='__no_legend__')\n",
     "plt.ylabel('log-scale',fontsize=15)\n",
     "plt.legend(frameon=False,bbox_to_anchor=(1.08,1.07),fontsize=12)\n",
-    "#plt.savefig('Stocks vs Bonds.pdf')\n",
-    ""
+    "plt.savefig('Stocks vs Bonds.pdf')\n"
    ]
   },
   {
@@ -251,7 +250,7 @@
     "        ax1.plot(df1['dgs1'],label='1Y Treasury',c=goldman_blue)\n",
     "        ax1.plot(df1['dgs1_mvavg'],c='navy',linestyle='--',label='__no_legend__')\n",
     "        plt.legend(frameon=False,bbox_to_anchor=(0.2,1.1),fontsize=12)\n",
-    "    #plt.savefig('Stocks vs Bonds1.pdf')\n",
+    "        \n",
     "    plt.show()"
    ]
   },
@@ -576,8 +575,7 @@
     "plt.xlabel('Year', fontsize=12)\n",
     "plt.ylabel('Price', fontsize=12)\n",
     "\n",
-    "#plt.savefig('Forecast.pdf')\n",
-    ""
+    "plt.savefig('Forecast.pdf')\n"
    ]
   },
   {
